# git-template-repo

./: .gitignore  .gitlab-ci.yml  README.md  git-template-repo.cmd  git-template-repo.py  gitlab-ci.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  test.yml
git_template_repo/: __init__.py  __main__.py  git_template_repo.py  test.py
git_template_repo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_commands.py  test_internal.py
